# TensorRT-Demo

./: .gitattributes  README.md
TRT_Dynamic_Input/: CMakeLists.txt  Infer_Onnx.cpp  Infer_Onnx.py  README.md
TRT_Dynamic_Input/model/: Dynamics_InputNet.onnx  Export_Onnx.py  Static_InputNet.onnx
TRT_MLP/: CMakeLists.txt  MLP_Demo.cpp  MLP_Demo.py  README.md
TRT_Serialize_and_Deserialize/: CMakeLists.txt  Deserialize.cpp  Infer_Onnx.py  README.md  Serialize_onnx.cpp
TRT_Serialize_and_Deserialize/model/: Export_linear.py
TRT_VGG/: CMakeLists.txt  VGG_Demo.cpp  readme.md
TRT_VGG/weights/: vgg.py
TRT_YoloV3_Tiny/: CMakeLists.txt  README.md  yololayer.cu  yolov3-tiny_Demo.cpp
TRT_YoloV3_Tiny/include/: pre_post_process.hpp  yololayer.h
TRT_YoloV5/: CMakeLists.txt  README.md  test.txt  yolov5_det.cpp  yolov5_seg.cpp
TRT_YoloV5/src/: postprocess.cpp  postprocess.h
TRT_YoloV5/yolov5/: gen_wts.py
TRT_YoloV8/: CMakeLists.txt  README.md  main.cpp  test.txt
TRT_YoloV8/src/: postprocess.cpp
